--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 				"deploy": "gh-pages -d dist"
 		},
 		"dependencies": {
+				"@types/csv-parse": "^1.2.2",
+				"@types/react": "^17.0.40",
+				"@types/react-dom": "^17.0.13",
 				"typescript": "^4.6.2"
 		}
 }
