add css, some simple styling, simple total

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm install && npm install typescript gh-pages
 
       - name: Build
-        run: npx tsc --project . && cp index.html dist/
+        run: npx tsc --project . && cp index.html src/main.css dist/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
